--- a/package.json
+++ b/package.json
@@ -5,13 +5,26 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "client": "npm start --prefix client"
+    "client": "npm start --prefix client",
+    "server": "nodemon app.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "axios": "^0.27.2",
-    "react-responsive-carousel": "^3.2.23"
+    "bcrypt": "^5.0.1",
+    "chalk": "^4.1.2",
+    "concurrently": "^7.2.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.3",
+    "multer": "^1.4.5-lts.1",
+    "react-responsive-carousel": "^3.2.23",
+    "validator": "^13.7.0"
   }
 }
