--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^6.4.3",
     "multer": "^1.4.5-lts.1",
     "react-responsive-carousel": "^3.2.23",
+    "sharp": "^0.30.7",
     "validator": "^13.7.0"
   }
 }
