--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.4.0",
     "sharp": "^0.30.7",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
     "validator": "^13.7.0"
   }
 }
