--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "i": "^0.3.7",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mongoose": "^6.4.3",
     "multer": "^1.4.5-lts.1",
+    "npm": "^8.14.0",
+    "react-cookie": "^4.1.1",
     "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.4.0",
     "sharp": "^0.30.7",
