--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "aws-sdk": "^2.1244.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "chalk": "^4.1.2",
